# final-capstone

./: .dockerignore  .gitignore  README.md  docker-compose.yml
be/: Dockerfile  main.py  pyproject.toml  requirements.txt  test.py
be/models/: kmeans_persona_model.pkl  persona_mapping.json  sample_user_features.csv  scaler_clustering.pkl
be/schema/: user_features.py
fe/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
fe/src/: App.jsx
fe/src/components/: Sidebar.jsx
fe/src/pages/: Analysis.jsx  Dashboard.jsx  UserGuide.jsx
